[package]
name = "bewallet-cli"
version = "0.1.0"
authors = ["Leonardo Comandini <leo@leocomandini.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
structopt = "0.3.13"
bewallet = { git = "https://github.com/LeoComandini/BEWallet", rev = "482e7c3b2003597214295a759348c7c9c9b333d3" }
#bewallet = { path = "../BEWallet" }
